# sqlmesh-python-models

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  config.yaml  dev_state.db  justfile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
macros/: __init__.py
models/: bronze.py  bronze.sql
scripts/: __init__.py
seeds/: seed_data.csv
signals/: __init__.py
